@@ -1,3 +1,6 @@
+2019-12-06 Massimo Manghi <mxmanghi@apache.org>
+    * src/mod_rivet_ng/rivetCore.c: expanded error info data in Rivet_Upload
+
 2019-12-04 Massimo Manghi <mxmanghi@apache.org>
     * src/mod_rivet_ng/rivetCore.c: new branch uploadcmdfix with improved
     argument checking in Rivet_Upload that was the cause of random crashes
